// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`beforeEnter_FIRST 1`] = `1`;

exports[`first_action 1`] = `
Object {
  "commit": [Function],
  "nextHistory": MemoryHistory {
    "_forceRefresh": false,
    "_listener": [Function],
    "basename": "",
    "basenames": Array [],
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
    ],
    "firstRoute": [Circular],
    "index": 0,
    "kind": "load",
    "length": 1,
    "location": Object {
      "basename": "",
      "hash": "",
      "key": "345678",
      "pathname": "/first",
      "search": "",
      "state": Object {},
      "url": "/first",
    },
    "saveHistory": [Function],
  },
  "type": "@@rudy/UPDATE_HISTORY",
}
`;

exports[`first_history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
]
`;

exports[`first_history_index 1`] = `0`;

exports[`first_response 1`] = `
Object {
  "location": Object {
    "committed": true,
    "kind": "redirect",
    "status": 302,
    "url": "/redirected",
  },
  "status": 302,
  "type": "REDIRECTED",
  "url": "/redirected",
}
`;

exports[`first_state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
    ],
    "hasSSR": true,
    "hash": "",
    "index": 0,
    "kind": "load",
    "length": 1,
    "params": Object {},
    "pathname": "/first",
    "prev": Object {
      "basename": "",
      "entries": Array [],
      "hasSSR": true,
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "FIRST",
    "url": "/first",
  },
  "title": "FIRST",
}
`;

exports[`first_title 1`] = `""`;

exports[`initial_state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
    ],
    "hasSSR": true,
    "hash": "",
    "index": 0,
    "kind": "init",
    "length": 1,
    "params": Object {},
    "pathname": "/first",
    "prev": Object {
      "basename": "",
      "entries": Array [],
      "hasSSR": true,
      "hash": "",
      "index": -1,
      "kind": "",
      "length": 0,
      "params": Object {},
      "pathname": "",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "type": "",
      "url": "",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "type": "FIRST",
    "url": "/first",
  },
  "title": "@@redux/INIT",
}
`;

exports[`options 1`] = `Object {}`;

exports[`thunk_FIRST 1`] = `1`;
